--- a/now.json
+++ b/now.json
@@ -1,6 +1,10 @@
 {
     "version": 2,
     "name": "kairichardkoenig.de",
-    "alias": "kairichardkoenig.de"
+    "alias": "kairichardkoenig.de",
+    "scripts": {
+      "install": "curl -L -O https://github.com/gohugoio/hugo/releases/download/v0.58.3/hugo_0.58.3_Linux-64bit.tar.gz && tar -xzf hugo_0.58.3_Linux-64bit.tar.gz",
+      "build": "./hugo"
+    }
   }
 
