--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "/"
 languageCode = "en-us"
-title = "Hugo Whisper Theme"
+title = "Kai Richard König"
 themesDir = "themes"
 theme = "hugo-whisper-theme"
 
