--- a/now.json
+++ b/now.json
@@ -3,8 +3,7 @@
     "name": "kairichardkoenig.de",
     "alias": "kairichardkoenig.de",
     "scripts": {
-      "install": "curl -L -O https://github.com/gohugoio/hugo/releases/download/v0.58.3/hugo_0.58.3_Linux-64bit.tar.gz && tar -xzf hugo_0.58.3_Linux-64bit.tar.gz",
-      "build": "./hugo"
+      "build": "hugo"
     }
   }
 
