--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,11 +17,11 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: "0.57.0"
+          hugo-version: "0.58.3"
           # extended: true
 
       - name: Build
-        run: hugo --minify
+        run: hugo --gc --minify --i18n-warnings --log
 
       - name: Upload math result for job 1
         uses: actions/upload-artifact@v1
