--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: "0.58.3"
-          # extended: true
+          extended: true
 
       - name: Build
         run: hugo --gc --minify --i18n-warnings --log
