--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,4 +41,4 @@ jobs:
         run: |
           npm i now 
           export export PATH=`npm bin path`:$PATH
-          cd site/ && NOW_PROJECT_ID=${{ secrets.NOW_PROJECT_ID }} NOW_ORG_ID=${{ secrets.NOW_PROJECT_ID }} now --token ${{ secrets.NOW_PROJECT_ID }} deploy --prod
+          cd site/ && NOW_PROJECT_ID=${{ secrets.NOW_PROJECT_ID }} NOW_ORG_ID=${{ secrets.NOW_PROJECT_ID }} now --token=${{ secrets.NOW_TOKEN }} deploy --prod
