Reenable git integration

--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "Kai Richard König"
 themesDir = "themes"
 theme = "hugo-whisper-theme"
 enableInlineShortcodes = true
-# enableGitInfo = true
+enableGitInfo = true
 pygmentsCodeFences = true
 pygmentsCodefencesGuessSyntax = true
 pygmentsUseClasses = true
