--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,6 +31,7 @@ jobs:
 
   verify:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Download site
         uses: actions/download-artifact@v1
@@ -45,7 +46,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: verify
     steps:
       - name: Download site
         uses: actions/download-artifact@v1
