--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,9 +40,9 @@ jobs:
 
       - name: bork
         run: |
-          curl -L https://github.com/smallhadroncollider/brok/releases/download/1.0.0/brok-1.0.0_x86-64-mac.tar.gz -o bork.tar.gz
+          curl -L https://github.com/smallhadroncollider/brok/releases/download/1.0.0/brok-1.0.0_x86-64-linux.tar.gz -o bork.tar.gz
           tar -xvzf bork.tar.gz
-          ./brok --ignore "https://kairichardkoenig.de" "https://www.linkedin.com" "http://161.111.111.111" $(find .site/ -type f -name "*.html")
+          ./brok --ignore "https://kairichardkoenig.de" "https://www.linkedin.com" "http://161.111.111.111" $(find ./site -type f -name "*.html")
 
   deploy:
     runs-on: ubuntu-latest
