--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,6 +5,11 @@ on:
     branches:
       - master
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -42,18 +47,15 @@ jobs:
         run: |
           curl -L https://github.com/smallhadroncollider/brok/releases/download/1.1.0/brok-1.1.0_x86-64-linux.tar.gz -o bork.tar.gz
           tar -xvzf bork.tar.gz
-          ./brok --only-failures --ignore "https://t.co/DlOcGYdnwB" "https://kairichardkoenig.de" "https://www.linkedin.com" "https://easytainer.cloud" "http://161.111.111.111" "https://www.futurepackagingforum.com/" $(find ./site -type f -name "*.html")
+          ./brok --only-failures --ignore "https://t.co/DlOcGYdnwB" "https://kairichardkoenig.de" "https://www.linkedin.com" "https://easytainer.cloud" "http://161.111.111.111" "https://www.futurepackagingforum.com/" "https://linkist.de/" "https://dilbertblog.typepad.com" "https://www.hotcars.com/" $(find ./site -type f -name "*.html")
 
   deploy:
+    environment:
+      name: production
+      url: https://kairichardkoenig.de
     runs-on: ubuntu-latest
-    needs: verify
+    needs: build
     steps:
-      - name: Download site
-        uses: actions/download-artifact@v1
-        with:
-          name: site
-      - name: deploy
-        run: |
-          npm i now
-          export export PATH=`npm bin path`:$PATH
-          cd site/ && NOW_PROJECT_ID=${{ secrets.NOW_PROJECT_ID }} NOW_ORG_ID=${{ secrets.NOW_ORG_ID }} now --token=${{ secrets.NOW_TOKEN }} deploy --prod
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
