Fix path of where html files are actually built to

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,7 +42,7 @@ jobs:
         run: |
           curl -L https://github.com/smallhadroncollider/brok/releases/download/1.1.0/brok-1.1.0_x86-64-linux.tar.gz -o bork.tar.gz
           tar -xvzf bork.tar.gz
-          ./brok --only-failures --ignore "https://t.co/DlOcGYdnwB" "https://kairichardkoenig.de" "https://www.linkedin.com" "https://easytainer.cloud" "http://161.111.111.111" "https://www.futurepackagingforum.com/" "https://linkist.de/" $(find ./site -type f -name "*.html")
+          ./brok --only-failures --ignore "https://t.co/DlOcGYdnwB" "https://kairichardkoenig.de" "https://www.linkedin.com" "https://easytainer.cloud" "http://161.111.111.111" "https://www.futurepackagingforum.com/" "https://linkist.de/" $(find ./public -type f -name "*.html")
 
   deploy:
     runs-on: ubuntu-latest
@@ -56,4 +56,4 @@ jobs:
         run: |
           npm i now
           export export PATH=`npm bin path`:$PATH
-          cd site/ && NOW_PROJECT_ID=${{ secrets.NOW_PROJECT_ID }} NOW_ORG_ID=${{ secrets.NOW_ORG_ID }} now --token=${{ secrets.NOW_TOKEN }} deploy --prod
+          cd public/ && NOW_PROJECT_ID=${{ secrets.NOW_PROJECT_ID }} NOW_ORG_ID=${{ secrets.NOW_ORG_ID }} now --token=${{ secrets.NOW_TOKEN }} deploy --prod
