Now we need to download into the same folder

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: site
+          path: ./public
 
       - name: bork
         run: |
@@ -52,6 +53,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: site
+          path: ./public
       - name: deploy
         run: |
           npm i now
