--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,15 +39,18 @@ jobs:
           name: site
           path: ./public
 
-      - name: bork
+      - name: Check links
+        id: check_links
+        continue-on-error: true
         run: |
           curl -L https://github.com/smallhadroncollider/brok/releases/download/1.1.0/brok-1.1.0_x86-64-linux.tar.gz -o bork.tar.gz
           tar -xvzf bork.tar.gz
-          ./brok --only-failures --ignore "https://t.co/DlOcGYdnwB" "https://kairichardkoenig.de" "https://www.linkedin.com" "https://easytainer.cloud" "http://161.111.111.111" "https://www.futurepackagingforum.com/" "https://linkist.de/" $(find ./public -type f -name "*.html")
+          chmod +x scripts/check-links.sh
+          ./scripts/check-links.sh
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, verify]
     steps:
       - name: Download site
         uses: actions/download-artifact@v4
