--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,6 +33,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: "Checkout"
+        uses: actions/checkout@master
+        with:
+          fetch-depth: 0 # Fetch all history for .GitInfo and .Lastmod
+          
       - name: Download site
         uses: actions/download-artifact@v4
         with:
